- fix bug red flicker - refactor intersectionObserver logic, added disconnect observer - add css class simply-note_drug for

--- a/src/simply-note-style.css
+++ b/src/simply-note-style.css
@@ -14,6 +14,10 @@
     background-color: yellow;
 }
 
+.simply-note_drag {
+    opacity: 0.5;
+}
+
 .simply-note_trash {
     background-color: red;
 }
